# xsdata-pydantic-basemodel

./: .github_changelog_generator  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/xsdata_pydantic_basemodel/: __init__.py  _pydantic_compat.py  bindings.py  compat.py  generator.py
tests/: test_bindings.py  test_compat.py  test_generator.py
tests/fixtures/: common.py
tests/fixtures/po/: models.py
